--- a/main.css
+++ b/main.css
@@ -18,13 +18,147 @@
     --nivel5: 25;
     --nivel6: 30;
     --border: 1px solid #ffffff;
-    --border2: 3px solid #D3835F;
+    --border2: 1px solid #D3835F;
 }
 body{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     overflow-x: hidden;
     background-color: var(--color3);
     font-family: 'Poppins', sans-serif;
     -webkit-tap-highlight-color: transparent;
+}
+/* EMCABEZADO */
+#encabezado{
+    position: relative;
+    width: 100vw;
+    height: 800px;    
+}
+#redesSociales{
+    position: fixed;
+    width: 100%;
+    height: 4em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#iconRedeS{
+    position: fixed;
+    top: 0;
+    height: 5em;
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.redesS{
+    width: 2em;
+    height: 2em;
+    border-radius: 50%;
+    background-color: var(--color1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    overflow: hidden;
+}
+.redesS img{
+    width: 1em;
+    height: 1em;
+}
+.redesS:active{
+    width: 2.5em;
+    height: 2.5em;
+}
+#portada{
+    position: fixed;
+    top: 0em;
+    width: 100%;
+    height: 800px;
+    z-index: var(--nivel1);
+    background-image: url(recursos/portada.jpg);
+    background-attachment: fixed;
+    background-position-x: -10em;
+    background-position-y: -18.5em;
+    background-repeat: no-repeat;
+    background-size: 450%;
+    box-shadow: 0px -1px 5px 0px rgba(0,0,0,0.75);
+}
+    .portadaArriba{
+        transform: translateY(0);
+    }
+    .portadaAbajo{
+        transform: translateY(5em);
+    }
+#imgMenu{
+    position: fixed;
+    top: 1em;
+    right: 1em;
+    width: 2em;
+    height: 2em;
+    background-image: url(recursos/menu.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    transform: rotate(90deg);
+    cursor: pointer;
+}
+#portada h1{
+    position: fixed;
+    top: 6em;
+    left: 1em;
+    font-family: 'Rosmatika', Arial, Helvetica, sans-serif;
+    font-size: 1.3em;
+    color: var(--color2);
+    animation: dezplazar 1s 1;
+}
+@keyframes dezplazar{
+    0%{
+        transform: translate(-20em);
+    }
+}
+#portada p{
+    position: fixed;
+    top: 11.5em;
+    left: 1.5em;
+    width: 80%;
+    font-size: .9em;
+    text-align: justify;
+    color: var(--color1);
+    animation: dezplazar 1s 1 ;
+}
+#botonTeCuento{
+    position: fixed;
+    top: 25em;
+    right: 1.5em;
+    width: 12em;
+    height: 2.5em;
+    font-size: .9em;
+    border-radius: 1.5em;
+    color: var(--color6);
+    background-color: var(--color4);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    animation: dezplazarB 1s 1;
+}
+@keyframes dezplazarB{
+    0%{
+        transform: translate(20em);
+    }
+}
+/* WAVE */
+#wave{
+    position: absolute;
+    width: 100%;
+    height: 350px;
+    top: calc(802px - 350px);
+    left: 0;
+    background-image: url(recursos/wave.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    z-index: var(--nivel1);
 }
