--- a/main.css
+++ b/main.css
@@ -257,3 +257,80 @@ body{
     background-color: var(--color1);
     color: var(--color6);
 }
+/* PROYECTOS */
+#Portafolio{
+    position: relative;
+    width: 100%;
+    height: calc((20em*9));
+    z-index: var(--nivel4);
+    display: grid;
+    grid-template-columns: repeat(1, 18em);
+    grid-template-rows: repeat(9, 18em);
+    align-content: space-around;
+    justify-content: space-around;
+    background-color: var(--color1);
+}
+.dise, .diseImg{
+    width: 18em;
+    height: 18em;
+    overflow: hidden;
+}
+.diseImg:hover{
+    transform: rotate(-10deg) scale(1.3);
+    transition: 1s;
+}
+.diseImg:hover::after{
+    content: '';
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 0;
+    width: 20em;
+    height: 20em;
+}
+.extra{
+    box-shadow: 0px 0px 23px 0px rgba(0,0,0,0.75);
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.extraImg{
+    background-position: center;
+    background-repeat: no-repeat;
+}
+#diseImg_1{
+    background-image: url(recursos/Dise1.jpg);
+    background-size: 200%;
+}
+#diseImg_2{
+    background-image: url(recursos/Dise2.jpg);
+    background-size: 200%;
+}
+#diseImg_3{
+    background-image: url(recursos/Dise3.jpg);
+    background-size: 200%;
+}
+#diseImg_4{
+    background-image: url(recursos/Dise4.jpg);
+    background-size: 150%;
+}
+#diseImg_5{
+    background-image: url(recursos/Dise5.jpg);
+    background-size: 150%;
+}
+#diseImg_6{
+    background-image: url(recursos/Dise6.jpg);
+    background-size: 150%
+}
+#diseImg_7{
+    background-image: url(recursos/Dise7.jpg);
+    background-size: 100%;
+}
+#diseImg_8{
+    background-image: url(recursos/Dise8.jpg);
+    background-size: 100%;
+}
+#diseImg_9{
+    background-image: url(recursos/Dise9.jpg);
+    background-size: 100%;
+}
